--- a/server/views/partials/updateModal.ejs
+++ b/server/views/partials/updateModal.ejs
@@ -12,7 +12,7 @@
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
                     </svg>
-                    <span class="sr-only">Close modal</span>
+                    <span class="sr-only">Close</span>
                 </button>
             </div>
             <form id="updateForm" action="/collections/update" method="POST"  class="p-4 md:p-5" onsubmit="updateCollection(event)">
