fix displaying all collections to any user

--- a/server/views/toby.ejs
+++ b/server/views/toby.ejs
@@ -1,9 +1,9 @@
 <div class="bg-slate-300 min-h-screen flex items-center justify-center">
     <section class="w-[80%] mx-auto p-6 bg-slate-50 shadow-md rounded-lg">
-        <h1 class="text-4xl font-bold text-center mb-8 fade-in">Toby Page</h1>
-        <%- include('partials/collectionForm') %>
-            <%- include('partials/collectionsList') %>
-                <%- include('partials/deleteModal') %>
-                    <%- include('partials/deleteBookmarkModal') %>
-                        <%- include('partials/updateBookmarkModal') %>
-                            <%- include('partials/updateModal') %>
+        <%- include('partials/header') %>
+            <%- include('partials/collectionForm') %>
+                <%- include('partials/collectionsList') %>
+                    <%- include('partials/deleteModal') %>
+                        <%- include('partials/deleteBookmarkModal') %>
+                            <%- include('partials/updateBookmarkModal') %>
+                                <%- include('partials/updateModal') %>
