--- a/server/views/partials/collectionsList.ejs
+++ b/server/views/partials/collectionsList.ejs
@@ -40,7 +40,7 @@
                                         </span>
                             </div>
                             <button
-                                onclick="populateBookmarkUpdateForm('<%= bookmark.id %>', '<%= bookmark.name %>', '<%= bookmark.link %>', '<%= bookmark.icon %>')"
+                                onclick="populateBookmarkUpdateForm('<%= bookmark.id %>', '<%= bookmark.name %>', '<%= bookmark.url %>', '<%= bookmark.icon %>')"
                                 data-modal-target="update-bookmark-modal" data-modal-toggle="update-bookmark-modal"
                                 class="text-white bg-blue-500 hover:bg-blue-700 font-medium rounded-lg text-sm px-4 py-2"
                                 type="button">
@@ -110,7 +110,7 @@
                                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Icon</label>
                                     <input type="file" name="icon" id="icon1"
                                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                                        placeholder="Icon" required>
+                                        placeholder="Icon">
                                 </div>
 
                                 <input type="hidden" id="collectionId1" name="collectionId">
