--- a/server/views/toby.ejs
+++ b/server/views/toby.ejs
@@ -1,9 +1,13 @@
 <%- include('partials/header') %>
-<div class="bg-slate-300 min-h-screen flex items-center justify-center">
-    <section class="w-[80%] mx-auto p-6 bg-slate-50 shadow-md rounded-lg">
+    <div class="bg-slate-300 min-h-screen flex items-center justify-center">
+
+        <section class="w-[80%] block min-h-screen mx-auto p-6 bg-slate-50 shadow-md rounded-lg">
+
             <%- include('partials/collectionForm') %>
                 <%- include('partials/collectionsList') %>
                     <%- include('partials/deleteModal') %>
-                        <%- include('partials/deleteBookmarkModal') %>
-                            <%- include('partials/updateBookmarkModal') %>
-                                <%- include('partials/updateModal') %>
+                        <%- include('partials/createBookmarkModal') %>
+                            <%- include('partials/deleteBookmarkModal') %>
+                                <%- include('partials/updateBookmarkModal') %>
+                                    <%- include('partials/updateModal') %>
+                                        <%- include('partials/createTagModal') %>
