--- a/server/views/partials/collectionsList.ejs
+++ b/server/views/partials/collectionsList.ejs
@@ -1,159 +1,62 @@
 <% collections.forEach((collection, index)=> { %>
     <% const colors=['bg-blue-200', 'bg-green-200' , 'bg-yellow-200' , 'bg-red-200' ,'bg-purple-200' ]; %>
-        <% const colorClass=colors[index % colors.length]; %>
-            <div class="flex items-center justify-between mb-4">
-                <button class="text-2xl font-semibold text-left w-full flex items-center justify-start fade-in"
-                    onclick="toggleCollection('<%= collection.id %>', this)">
-                    <span class="mr-2 w-6 h-6 rounded-full flex items-center justify-center bg-slate-600">
-                        <img src="/images/arrow.svg" class="w-4 h-4 ease-in-out duration-300 transform rotate-90" alt="arrow"
-                            id="arrowIcon<%= collection.id %>">
-                    </span>
-                    <%= collection.name %>
-                </button>
-                <button
-                    onclick="populateUpdateForm('<%= collection.id %>', '<%= collection.name %>', '<%= collection.description %>')"
-                    data-modal-target="update-modal" data-modal-toggle="update-modal"
-                    class="text-white bg-blue-500 hover:bg-blue-700 font-medium rounded-lg text-sm px-4 py-2"
-                    type="button">
-                    Update
-                </button>
-                <button onclick="confirmDelete('<%= collection.id %>', '<%= collection.name %>')"
-                    data-modal-target="popup-modal" data-modal-toggle="popup-modal"
-                    class="text-white bg-red-500 hover:bg-red-700 font-medium rounded-lg text-sm px-4 py-2"
-                    type="button">
-                    Delete
-                </button>
-            </div>
-            <div id="collection<%= collection.id %>"
-                class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 bookmarks-container">
-                <% collection.bookmarks.forEach(bookmark=> { %>
-                    <div
-                        class="<%= colorClass %> p-4 rounded-lg transform transition-transform hover:scale-105 fade-in text-gray-700 font-bold">
-                        <a href="<%= bookmark.url %>" target="_blank" class="block">
-                            <div class="flex items-center space-x-2">
-                                <% if (bookmark.icon) { %>
-                                    <img src="/uploads/<%= bookmark.icon %>" alt="<%= bookmark.name %>"
-                                        class="w-8 h-8 rounded-full">
-                                    <% } %>
-                                        <span class="text-lg font-semibold">
-                                            <%= bookmark.name %>
-                                        </span>
-                            </div>
-                            <button
-                                onclick="populateBookmarkUpdateForm('<%= bookmark.id %>', '<%= bookmark.name %>', '<%= bookmark.url %>', '<%= bookmark.icon %>')"
-                                data-modal-target="update-bookmark-modal" data-modal-toggle="update-bookmark-modal"
-                                class="text-white bg-blue-500 hover:bg-blue-700 font-medium rounded-lg text-sm px-4 py-2"
-                                type="button">
-                                Update
-                            </button>
-
-                            <button onclick="confirmBookmarkDelete('<%= bookmark.id %>', '<%= bookmark.name %>')"
-                                data-modal-target="delete-bookmark-modal" data-modal-toggle="delete-bookmark-modal"
-                                class="text-white bg-red-500 hover:bg-red-700 font-medium rounded-lg text-sm px-4 py-2"
-                                type="button">
-                                Delete
-                            </button>
-                        </a>
+    <% const colorClass=colors[index % colors.length]; %>
+    <div class="flex items-center justify-between mb-4  space-x-3">
+        <button class="text-2xl font-semibold text-left w-full flex items-center justify-start fade-in"
+            onclick="toggleCollection('<%= collection.id %>', this)">
+            <span class="mr-2 w-6 h-6 rounded-full flex items-center justify-center bg-slate-600">
+                <img src="/images/arrow.svg" class="w-4 h-4 ease-in-out duration-300 transform rotate-90" alt="arrow"
+                    id="arrowIcon<%= collection.id %>">
+            </span>
+            <%= collection.name %>
+        </button>
+        <button
+            onclick="populateUpdateForm('<%= collection.id %>', '<%= collection.name %>', '<%= collection.description %>')"
+            data-modal-target="update-modal" data-modal-toggle="update-modal"
+            class="text-white bg-blue-500 hover:bg-blue-700 font-medium rounded-lg text-sm px-4 py-2"
+            type="button">
+            Update
+        </button>
+        <button onclick="confirmDelete('<%= collection.id %>', '<%= collection.name %>')"
+            data-modal-target="popup-modal" data-modal-toggle="popup-modal"
+            class="text-white bg-red-500 hover:bg-red-700 font-medium rounded-lg text-sm px-4 py-2"
+            type="button">
+            Delete
+        </button>
+    </div>
+    <div id="collection<%= collection.id %>"
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 bookmarks-container">
+        <% collection.bookmarks.forEach(bookmark=> { %>
+            <div class="<%= colorClass %> p-4 h-[125px] rounded-lg transform transition-transform hover:scale-105 fade-in text-gray-700 font-bold shadow-lg">
+                <a href="<%= bookmark.url %>" target="_blank" class="block">
+                    <div class="flex items-center space-x-4 mb-4">
+                        <% if (bookmark.icon) { %>
+                            <div class="w-10 h-10 rounded-full bg-cover bg-center" style="background-image: url('/uploads/<%= bookmark.icon %>');"></div>
+                        <% } %>
+                        <span class="text-lg font-semibold"><%= bookmark.name %></span>
                     </div>
-                    <% }) %>
-                        <button data-collection-id="<%= collection.id %>" data-modal-target="create-bookmark"
-                            data-modal-toggle="create-bookmark"
-                            class="<%= colorClass %> p-4 rounded-lg transform transition-transform hover:scale-105 fade-in text-gray-700 font-bold text-xl"
-                            type="button" onclick="createBookmarkButtonClicked(this)">
-                            New Link
-                        </button>
-            </div>
-            <% }) %>
-
-
-
-                <div id="create-bookmark" tabindex="-1" aria-hidden="true"
-                    class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-                    <div class="relative p-4 w-full max-w-md max-h-full">
-                        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-                            <div
-                                class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
-                                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">New Link</h3>
-                                <button type="button"
-                                    class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
-                                    data-modal-toggle="create-bookmark">
-                                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                                        fill="none" viewBox="0 0 14 14">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                            stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-                                    </svg>
-                                    <span class="sr-only">Close</span>
-                                </button>
-                            </div>
-                            <form id="bookmarkForm" class="p-4 md:p-5" method="post" action="/bookmarks/create"
-                                enctype="multipart/form-data">
-                                <input type="hidden" name="userId" value="<%= user.id %>">
-
-                                <div class="col-span-2">
-                                    <label for="name"
-                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
-                                    <input type="text" name="name" id="name1"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                                        placeholder="Name" required>
-                                </div>
-
-                                <div class="col-span-2">
-                                    <label for="url"
-                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Link</label>
-                                    <input type="url" name="url" id="url"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                                        placeholder="URL" required>
-                                </div>
-
-                                <div class="col-span-2">
-                                    <label for="icon"
-                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Icon</label>
-                                    <input type="file" name="icon" id="icon1"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                                        placeholder="Icon">
-                                </div>
-
-                                <input type="hidden" id="collectionId1" name="collectionId">
-                                <!-- Hidden input to hold collection id -->
-
-                                <button type="submit"
-                                    class="text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                                    <svg class="me-1 -ms-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd"
-                                            d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
-                                    Add Bookmark
-                                </button>
-                            </form>
-                        </div>
-                    </div>
+                </a>
+                <div class="flex justify-between">
+                    <button onclick="populateBookmarkUpdateForm('<%= bookmark.id %>', '<%= bookmark.name %>', '<%= bookmark.url %>', '<%= bookmark.icon %>')"
+                        data-modal-target="update-bookmark-modal" data-modal-toggle="update-bookmark-modal"
+                        class="text-white bg-blue-500 hover:bg-blue-700 font-medium rounded-lg text-sm px-4 py-2 transition duration-300"
+                        type="button">
+                        Update
+                    </button>
+                    <button onclick="confirmBookmarkDelete('<%= bookmark.id %>', '<%= bookmark.name %>')"
+                        data-modal-target="delete-bookmark-modal" data-modal-toggle="delete-bookmark-modal"
+                        class="text-white bg-red-500 hover:bg-red-700 font-medium rounded-lg text-sm px-4 py-2 transition duration-300"
+                        type="button">
+                        Delete
+                    </button>
                 </div>
-
-                <script>
-                    function populateCreateBookmarkForm(collectionId) {
-                        document.getElementById('collectionId1').value = collectionId;
-                        console.log('Collection id:', collectionId);
-                    }
-
-                    function createBookmarkButtonClicked(button) {
-                        var collectionId = button.getAttribute('data-collection-id');
-                        console.log('Collection id:', collectionId);
-
-                        populateCreateBookmarkForm(collectionId);
-                    }
-                </script>
-
-                <script>
-                    document.querySelectorAll('[data-modal-toggle]').forEach(function (modalToggle) {
-                        modalToggle.addEventListener('click', function (event) {
-                            event.preventDefault();
-                            const targetModalId = modalToggle.getAttribute('data-modal-toggle');
-                            const modal = document.getElementById(targetModalId);
-                            if (modal) {
-                                modal.classList.toggle('hidden');
-                            }
-                        });
-                    });
-                </script>
+            </div>
+        <% }) %>
+        <button data-collection-id="<%= collection.id %>" data-modal-target="create-bookmark"
+            data-modal-toggle="create-bookmark"
+            class="<%= colorClass %> p-4 rounded-lg transform transition-transform hover:scale-105 fade-in text-gray-700 font-bold text-xl h-[125px]"
+            type="button" onclick="createBookmarkButtonClicked(this)">
+            New Link
+        </button>
+    </div>
+<% }) %>
