add collection tags and display them

--- a/server/views/toby.ejs
+++ b/server/views/toby.ejs
@@ -11,3 +11,4 @@
                                 <%- include('partials/updateBookmarkModal') %>
                                     <%- include('partials/updateModal') %>
                                         <%- include('partials/createTagModal') %>
+                                        <%- include('partials/createTagCollectionModal') %>
