--- a/server/views/partials/createTagCollectionModal.ejs
+++ b/server/views/partials/createTagCollectionModal.ejs
@@ -1,4 +1,4 @@
-<div id="tag-modal" tabindex="-1" aria-hidden="true"
+<div id="create-tag-modal" tabindex="-1" aria-hidden="true"
     class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
     <div class="relative p-4 w-full max-w-md max-h-full">
         <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
@@ -6,7 +6,7 @@
                 <h3 class="text-lg font-semibold text-gray-900 dark:text-white">New Tag</h3>
                 <button type="button"
                     class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
-                    data-modal-toggle="tag-modal">
+                    data-modal-toggle="create-tag-modal">
                     <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                         viewBox="0 0 14 14">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -15,25 +15,18 @@
                     <span class="sr-only"> modal</span>
                 </button>
             </div>
-            <form class="p-4 md:p-5" action="tags/create" method="POST">
+            <form class="p-4 md:p-5" action="/collections/create/tag" method="POST">
                 <input type="hidden" name="userId" value="<%= user.id %>">
                 <div class="grid gap-4 mb-4 grid-cols-2">
-                    <div class="col-span-2">
-                        <label for="name"
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
-                        <input type="text" name="name" id="tagName"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                            placeholder="Tag name" required>
-                    </div>
-
-                    <div class="col-span-2">
-                        <label for="name"
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Color</label>
-                        <input type="color" name="color" id="tagcolor"
-                            class="block w-full"
-                            placeholder="Tag name" required>
-                    </div>
-                    
+                    <input type="hidden" id="collectionId123" name="collectionId">
+                    <select id="tagSelect" name="tagId" class="mt-1 block w-full border border-gray-300 rounded-md p-2"
+                        required>
+                        <% tags.forEach(tag=> { %>
+                            <option value="<%= tag.id %>">
+                                <%= tag.name %>
+                            </option>
+                            <% }) %>
+                    </select>
                 </div>
                 <button type="submit"
                     class="text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
@@ -49,3 +42,17 @@
         </div>
     </div>
 </div>
+
+<script>
+    function openCreateTagModal(collectionId) {
+        document.getElementById('collectionId123').value = collectionId;
+        fetchTags();
+        toggleModal('create-tag-modal');
+    }
+
+    function toggleModal(modalId) {
+        const modal = document.getElementById(modalId);
+        modal.classList.toggle('hidden');
+    }
+
+</script>
