--- a/server/views/partials/workspacesList.ejs
+++ b/server/views/partials/workspacesList.ejs
@@ -15,21 +15,41 @@
             <%= workspace.name %>
         </h2>
         <button
-        onclick="populateUpdateWorkspaceForm('<%= workspace.id %>', '<%= workspace.name %>', '<%= workspace.description %>')"
-        data-modal-target="update-workspace-modal" data-modal-toggle="update-workspace-modal"
-        class="text-white bg-blue-500 hover:bg-blue-700 font-medium rounded-lg text-sm px-4 py-2 transition duration-300"
-        type="button">
-        <img src="/images/edit.svg" alt="edit">
-
-        <button onclick="confirmWorkspaceDelete('<%= workspace.id %>', '<%= workspace.name %>')"
-            data-modal-target="popup-workspace-modal" data-modal-toggle="popup-workspace-modal"
-            class="text-white bg-red-500 hover:bg-red-700 font-medium rounded-lg text-sm px-4 py-2"
+            onclick="populateWorkspaceCollectionForm('<%= workspace.id %>', '<%= workspace.name %>', '<%= workspace.description %>')"
+            data-modal-target="create-workspace-collection-modal" data-modal-toggle="create-workspace-collection-modal"
+            class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 flex items-center justify-center space-x-2"
             type="button">
-            <img src="/images/delete.svg" alt="delete">
-            
+            <img src="/images/new-collection.svg" alt="collection" class="">
+            <span>New Collection</span>
         </button>
+        <button
+            onclick="populateUpdateWorkspaceForm('<%= workspace.id %>', '<%= workspace.name %>', '<%= workspace.description %>')"
+            data-modal-target="update-workspace-modal" data-modal-toggle="update-workspace-modal"
+            class="text-white bg-blue-500 hover:bg-blue-700 font-medium rounded-lg text-sm px-4 py-2 transition duration-300"
+            type="button">
+            <img src="/images/edit.svg" alt="edit">
 
-    </button>
+            <button onclick="confirmWorkspaceDelete('<%= workspace.id %>', '<%= workspace.name %>')"
+                data-modal-target="popup-workspace-modal" data-modal-toggle="popup-workspace-modal"
+                class="text-white bg-red-500 hover:bg-red-700 font-medium rounded-lg text-sm px-4 py-2" type="button">
+                <img src="/images/delete.svg" alt="delete">
+
+            </button>
+            
+
+        </button>
+        <form class="flex" action="/workspaces/create/collaborator" method="POST">
+            <input type="hidden" name="workspaceId" value="<%= workspace.id %>" />
+            <label for="users">Add a collaborator</label>
+            <select name="userId" id="users">
+                <% users.forEach(function(user) { %>
+                    <option value="<%= user.id %>">
+                        <%= user.firstName %> <%= user.lsstName %>
+                    </option>
+                    <% }); %>
+            </select>
+            <button type="submit">Add</button>
+        </form>
 
     </div>
     <% workspace.collections.forEach((collection, index)=> { %>
