--- a/server/views/partials/updateWorkspaceModal.ejs
+++ b/server/views/partials/updateWorkspaceModal.ejs
@@ -16,7 +16,7 @@
                 </button>
             </div>
             <form  action="/workspaces/update" method="POST"  class="p-4 md:p-5" >
-                <input type="hidden" name="id" id="updateWorkspaceId" >
+                <input type="hidden" name="workspaceId" id="updateWorkspaceId" >
 
                 <div class="grid gap-4 mb-4 grid-cols-2">
                     <div class="col-span-2">
