--- a/server/views/partials/deleteWorkspaceModal.ejs
+++ b/server/views/partials/deleteWorkspaceModal.ejs
@@ -13,7 +13,7 @@
                 </svg>
                 <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to delete the workspace "<span id="deleteWorkspaceName"></span>"?</h3>
                 <form id="deleteForm" method="POST" action="/workspaces/delete">
-                    <input type="hidden" name="id" id="deleteWorkspaceId">
+                    <input type="hidden" name="workspaceId" id="deleteWorkspaceId">
                     <button data-modal-hide="popup-workspace-modal" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
                         Yes, I'm sure
                     </button>
